Fix card layout issue

--- a/src/App.css
+++ b/src/App.css
@@ -292,12 +292,12 @@ body.modal-open {
   gap: 5rem;
   padding: 5vh 10vw;
 }
-
+/* 
 @media screen and (min-width: 768px) {
   .cards-container {
-    padding: 5vh 16vw;
+    padding: 5vh 10vw;
   }
-}
+} */
 
 .heading-card {
   display: flex;
